--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-package-lock.json
+# Node deps
+node_modules/
+**/node_modules/
 
-/node_modules
+# Lockfile (if you really want to ignore it)
+package-lock.json
