--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
-# Node deps
-node_modules/
-**/node_modules/
+# Dependencies
+node_modules
+**/node_modules
 
-# Lockfile (if you really want to ignore it)
-package-lock.json
+# Build outputs
+dist
+dist-ssr
+*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Cache
+.cache
+.npm
+.eslintcache
+
+# Test coverage
+coverage
