fet generador per tots els grafs

--- a/optimality/02_layer_planner/Makefile
+++ b/optimality/02_layer_planner/Makefile
@@ -11,11 +11,11 @@ GRAPH_SRC = $(GRAPH_DIR)/src
 
 # Source files
 SOURCES = $(SRCDIR)/Planifier.cc $(SRCDIR)/Robot.cc $(SRCDIR)/Task.cc \
-          $(SRCDIR)/algorithms/01_BruteForce.cc $(SRCDIR)/algorithms/02_DynamicProgramming.cc \
+          $(SRCDIR)/algorithms/01_BruteForce.cc \
           $(SRCDIR)/algorithms/03_Greedy.cc \
           $(GRAPH_SRC)/Graph.cc main.cc
 OBJECTS = $(BUILDDIR)/Planifier.o $(BUILDDIR)/Robot.o $(BUILDDIR)/Task.o \
-          $(BUILDDIR)/01_BruteForce.o $(BUILDDIR)/02_DynamicProgramming.o \
+          $(BUILDDIR)/01_BruteForce.o \
           $(BUILDDIR)/03_Greedy.o \
           $(BUILDDIR)/Graph.o $(BUILDDIR)/main.o
 
@@ -48,9 +48,6 @@ $(BUILDDIR)/Task.o: $(SRCDIR)/Task.cc $(INCDIR)/Task.hh | $(BUILDDIR)
 # Compile Algorithm implementations
 $(BUILDDIR)/01_BruteForce.o: $(SRCDIR)/algorithms/01_BruteForce.cc $(INCDIR)/algorithms/01_BruteForce.hh $(INCDIR)/Algorithm.hh | $(BUILDDIR)
 	$(CXX) $(CXXFLAGS) -I$(INCDIR) -I$(GRAPH_INC) -c $(SRCDIR)/algorithms/01_BruteForce.cc -o $(BUILDDIR)/01_BruteForce.o
-
-$(BUILDDIR)/02_DynamicProgramming.o: $(SRCDIR)/algorithms/02_DynamicProgramming.cc $(INCDIR)/algorithms/02_DynamicProgramming.hh $(INCDIR)/Algorithm.hh | $(BUILDDIR)
-	$(CXX) $(CXXFLAGS) -I$(INCDIR) -I$(GRAPH_INC) -c $(SRCDIR)/algorithms/02_DynamicProgramming.cc -o $(BUILDDIR)/02_DynamicProgramming.o
 
 $(BUILDDIR)/03_Greedy.o: $(SRCDIR)/algorithms/03_Greedy.cc $(INCDIR)/algorithms/03_Greedy.hh $(INCDIR)/Algorithm.hh | $(BUILDDIR)
 	$(CXX) $(CXXFLAGS) -I$(INCDIR) -I$(GRAPH_INC) -c $(SRCDIR)/algorithms/03_Greedy.cc -o $(BUILDDIR)/03_Greedy.o
@@ -90,15 +87,18 @@ help:
 	@echo "  make clean-all    - Remove compiled files and old directories"
 	@echo "  make help         - Show this help message"
 	@echo ""
-	@echo "Task Generators:"
-	@echo "  cd utils && make                              - Build task generators"
-	@echo "  cd utils && ./build/generate_tasks_graph1 10 15  - Generate test cases"
+	@echo "Task Generator (Universal):"
+	@echo "  cd utils && make                           - Build task generator"
+	@echo "  cd utils && make test-all                  - Test with all 10 graphs"
+	@echo "  cd utils && ./build/taskGenerator <graphID> <num_cases> <packets_per_case> [seed]"
+	@echo "  Example: cd utils && ./build/taskGenerator 1 10 15        # Graph1: 10 files, 15 packets each"
+	@echo "  Example: cd utils && ./build/taskGenerator 3 -i 10 10 10  # Graph3: 10, 20, ..., 100 packets"
 	@echo ""
 	@echo "Directory Structure:"
 	@echo "  src/              - Source files (.cc)"
 	@echo "  include/          - Header files (.hh)"
 	@echo "  build/            - Object files (.o)"
-	@echo "  tests/            - Test cases (graph1/, graph2/)"
-	@echo "  utils/            - Task generators (src/, build/)"
+	@echo "  tests/            - Test cases (graph1/, graph2/, ..., graph10/)"
+	@echo "  utils/            - Task generator (src/taskGenerator.cc, build/taskGenerator)"
 
 .PHONY: all clean clean-all run test help
