--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,11 +8,16 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -g \
 # Linker flags: Link our planner objects and the gtest libraries
 LDFLAGS = -L../external/googletest/build/lib -lgtest -lgtest_main -pthread
 
-# The final test executable name
-TARGET = run_tests
+# The final test executable name (output to build directory)
+TARGET = build/run_tests
 
 # Test source files
-TEST_SOURCES = main_test.cc scheduler_tests/scheduler_test.cc
+TEST_SOURCES = main.cc \
+               unit_tests/brute_force_test.cc \
+               unit_tests/greedy_test.cc \
+               unit_tests/hill_climbing_test.cc \
+               integration_tests/optimal_comparison_test.cc \
+               integration_tests/heuristic_comparison_test.cc
 
 # Application source files (needed for linking) - exclude main.cc and Algorithm.cc
 APP_SOURCES = $(filter-out ../optimality/02_layer_planner/main.cc ../optimality/02_layer_planner/src/Algorithm.cc, \
@@ -21,9 +26,13 @@ APP_SOURCES = $(filter-out ../optimality/02_layer_planner/main.cc ../optimality/
               $(wildcard ../optimality/02_layer_planner/src/algorithms/utils/*.cc) \
               $(wildcard ../optimality/01_layer_mapping/src/*.cc))
 
-# Generate object file names
-APP_OBJECTS = $(patsubst %.cc, %.o, $(APP_SOURCES))
-TEST_OBJECTS = $(patsubst %.cc, %.o, $(TEST_SOURCES))
+# Generate object file names (output to build directory)
+BUILD_DIR = build
+APP_OBJECTS = $(patsubst %.cc, $(BUILD_DIR)/%.o, $(notdir $(APP_SOURCES)))
+TEST_OBJECTS = $(patsubst %.cc, $(BUILD_DIR)/%.o, $(notdir $(TEST_SOURCES)))
+
+# Create build directory if it doesn't exist
+$(shell mkdir -p $(BUILD_DIR))
 
 all: $(TARGET)
 
@@ -31,11 +40,31 @@ all: $(TARGET)
 $(TARGET): $(APP_OBJECTS) $(TEST_OBJECTS)
 	$(CXX) $(CXXFLAGS) -o $(TARGET) $(APP_OBJECTS) $(TEST_OBJECTS) $(LDFLAGS)
 
-# Generic rule to compile any .cc file into a .o file
-%.o: %.cc
+# Compile application source files
+$(BUILD_DIR)/%.o: ../optimality/02_layer_planner/src/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.o: ../optimality/02_layer_planner/src/algorithms/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.o: ../optimality/02_layer_planner/src/algorithms/utils/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.o: ../optimality/01_layer_mapping/src/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+# Compile test source files
+$(BUILD_DIR)/%.o: %.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.o: unit_tests/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.o: integration_tests/%.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(APP_OBJECTS) $(TEST_OBJECTS) $(TARGET)
+	rm -rf $(BUILD_DIR)
+	rm -f unit_tests/*.o integration_tests/*.o  # Remove old .o files if they exist
 
 .PHONY: all clean
